@@ -1,3 +1,4 @@
+share/gphotoframe.appdata.xml.in
 share/gphotoframe.desktop.in
 share/gphotoframe-screensaver.desktop.in
 share/gphotoframe.schemas.in
