@@ -5,7 +5,7 @@ help=True
 [build_i18n]
 domain=gphotoframe
 desktop_files=[("share/applications", ("share/gphotoframe.desktop.in",)), ("share/applications/screensavers", ("share/gphotoframe-screensaver.desktop.in",))]
-xml_files=[("share/glib-2.0/schemas", ("share/com.googlecode.gphotoframe.gschema.xml.in",))]
+xml_files=[("share/glib-2.0/schemas", ("share/com.googlecode.gphotoframe.gschema.xml.in",)), ("share/appdata", ("share/gphotoframe.appdata.xml.in",))]
 
 [build_icons]
 icon-dir=share/icons
